<resources>
    <string name="app_name">Think Tank Trivia</string>

    // SplashScreenActivity2
    <string name="Captial_T">T</string>

    // Intro Screen
    <string name="Intro_string">Intro Screen</string>
    <string name="Intro_mainString">This app is a digital application that presents users with a series of questions on various topics, offering an interactive and often competitive way to test knowledge and have fun.</string>
    <string name="Sign_in">Sign In</string>
    <string name="Sign_up">Sign Up</string>

    // Sign Up
    <string name="Enter_your_name">Enter Your Name</string>
    <string name="Enter_your_email">Enter Your Email</string>
    <string name="Enter_your_phoneNo">Enter Your Mobile No</string>
    <string name="Enter_your_password">Enter Your Password</string>
    <string name="or">or</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="Login">Login</string>

    <string name="default_web_client_id">436608640094-9hlguhi0mej00fnrbd4okeq4dhlu8lr2.apps.googleusercontent.com</string>
    <string name="resend_otp">Resend otp in 10 sec</string>

    <string name="nav_header_text">Your Name</string>
    <string name="Update">Update</string>

    <string name="LetsPlay">Let\'s Play</string>


    <string name="GK">GK</string>
    <string name="Books">Books</string>
    <string name="Film">Film</string>
    <string name="Music">Music</string>
    <string name="Musical_Theaters">Musical Theaters</string>
    <string name="Television">Television</string>
    <string name="Video_Games">Video Games</string>
    <string name="Board_Games">Board_Games</string>
    <string name="Nature">Nature</string>
    <string name="Computers">Coumpters</string>
    <string name="Mathematics">Mathematics</string>
    <string name="Mythlogy">Mythlogy</string>
    <string name="Sports">Sports</string>
    <string name="Geography">Geography</string>
    <string name="History">History</string>
    <string name="Polities">Polities</string>
    <string name="Art">Art</string>
    <string name="Celeb">Celeb</string>
    <string name="Animals">Animals</string>
    <string name="Vehicles">Vehicles</string>
    <string name="Comics">Comics</string>
    <string name="Gadegets">Gadgets</string>
    <string name="JapAAM">Anime and Manga</string>
    <string name="Cartton">Cartoon</string>

    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="Enter_your_amount">Enter No of Question</string>
    <string name="LetsBegin">Let\'s Begin</string>
    <string name="Multiple">Multiple</string>
    <string name="True_False">True False</string>
    <string name="Choose">Choose Options</string>
    <string name="chooseOneCat">Chooce One Category</string>
    <string name="choose_one_diff">Choose One Difficulty</string>
    <string name="choose_one_type">Choose One Type</string>
</resources>