<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context=".Activity.IntroActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_size_56dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/very_very_light_orange"
            android:minHeight="?attr/actionBarSize"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/margin_top_64dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:elevation="@dimen/card_view_elevation"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/linear_layout_padding_16dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="@dimen/app_name_size"
                android:textColor="#EE9724"
                android:gravity="center"
                android:layout_marginTop="@dimen/app_name_margin_top"/>
            <ImageView
                android:layout_marginTop="@dimen/image_view_margin_top"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:src="@drawable/quiz"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Intro_mainString"
                android:textStyle="bold"
                android:textSize="@dimen/main_intro_textSize"
                android:textColor="#FFB74D"
                android:gravity="center"
                android:layout_marginTop="@dimen/app_name_margin_top"/>
            <TextView
                android:id="@+id/Sign_In"
                android:layout_marginTop="@dimen/signin_margintop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sign_in"
                android:textColor="@color/black"
                android:background="@drawable/sign_in_btn_bg"
                android:textSize="@dimen/Sign_btn_textSize"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingBottom="@dimen/Sign_padding_bottom"
                android:paddingTop="@dimen/Sign_padding_top"
                android:layout_marginLeft="@dimen/Sign_margin_left"
                android:layout_marginRight="@dimen/Sign_margin_right"/>
            <TextView
                android:id="@+id/Sign_Up"
                android:layout_marginTop="@dimen/signin_margintop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sign_up"
                android:textColor="@color/black"
                android:background="@drawable/sign_up_btn_bg"
                android:textSize="@dimen/Sign_btn_textSize"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingBottom="@dimen/Sign_padding_bottom"
                android:paddingTop="@dimen/Sign_padding_top"
                android:layout_marginLeft="@dimen/Sign_margin_left"
                android:layout_marginRight="@dimen/Sign_margin_right"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>