<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context=".LoginActivity.SignUpActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_size_56dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/very_very_light_orange"
            android:minHeight="?attr/actionBarSize"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/cardview_margin_top"
        android:layout_marginRight="@dimen/cardview_margin_left"
        android:layout_marginLeft="@dimen/cardview_margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">
        <LinearLayout
            android:padding="@dimen/linear_layout_padding_16dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editView_margin_start"
            app:hintTextColor="@color/black"
            android:layout_marginTop="@dimen/editView_margin_top"
            android:layout_marginEnd="@dimen/editView_margin_end"
            android:background="#f8f9fa"
            android:hint="@string/Enter_your_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:textColorHint="@color/black"
                android:hint="@string/Enter_your_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/editView_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editView_margin_start"
            app:hintTextColor="@color/black"
            android:layout_marginTop="@dimen/editView_margin_top2"
            android:layout_marginEnd="@dimen/editView_margin_end"
            android:background="#f8f9fa"
            android:hint="@string/Enter_your_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:textColorHint="@color/black"
                android:hint="@string/Enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/editView_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editView_margin_start"
            app:hintTextColor="@color/black"
            android:layout_marginTop="@dimen/editView_margin_top2"
            android:layout_marginEnd="@dimen/editView_margin_end"
            android:background="#f8f9fa"
            android:hint="@string/Enter_your_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:textColorHint="@color/black"
                android:hint="@string/Enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/editView_textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/Sign_Up_Btn"
            android:layout_marginTop="@dimen/signin_margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sign_up"
            android:textColor="@color/black"
            android:background="@drawable/sign_in_btn_bg"
            android:textSize="@dimen/Sign_btn_textSize"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingBottom="@dimen/Sign_padding_bottom"
            android:paddingTop="@dimen/Sign_padding_top"
            android:layout_marginLeft="@dimen/Sign_margin_left"
            android:layout_marginRight="@dimen/Sign_margin_right"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/linear_layout_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:background="@color/black"
            android:layout_marginLeft="@dimen/view_margin_left1"
            android:layout_marginRight="@dimen/view_margin_right1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="@dimen/editView_textSize"
            android:textStyle="bold"/>
        <View
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:layout_marginLeft="@dimen/view_margin_left2"
            android:layout_marginRight="@dimen/view_margin_right2"
            android:background="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/linear_layout_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_weight="1"
            android:id="@+id/circular_img_phone"
            android:layout_width="@dimen/circular_img_width"
            android:layout_height="@dimen/circular_img_height"
            android:src="@drawable/phone_icon" />
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_weight="1"
            android:id="@+id/circular_img_facebook"
            android:layout_width="@dimen/circular_img_width"
            android:layout_height="@dimen/circular_img_height"
            android:src="@drawable/facebook" />
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_weight="1"
            android:id="@+id/circular_image_google"
            android:layout_width="@dimen/circular_img_width2"
            android:layout_height="@dimen/circular_img_height2"
            android:src="@drawable/google_icon"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center|bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/textsize_last1"
            android:textColor="#6c757d"/>
        <TextView
            android:id="@+id/Login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textSize="@dimen/textsize_last1"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>