<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".Activity.UpdateProfileActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_size_56dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/very_very_light_orange"
            android:minHeight="?attr/actionBarSize"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/cardView_marginTop"
        android:layout_marginRight="@dimen/cardview_margin_left"
        android:layout_marginLeft="@dimen/cardview_margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">
        <LinearLayout
            android:gravity="center"
            android:padding="@dimen/linear_layout_padding_16dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/nav_header_image_size"
                android:layout_height="@dimen/nav_header_image_size"
                android:src="@drawable/baseline_person_24"
                app:civ_border_width="@dimen/nav_header_image_border_width"
                app:civ_border_color="#FF000000"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editView_margin_start"
                app:hintTextColor="@color/black"
                android:layout_marginTop="@dimen/editView_margin_top2"
                android:layout_marginEnd="@dimen/editView_margin_end"
                android:background="#f8f9fa"
                android:hint="@string/Enter_your_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:textColorHint="@color/black"
                    android:hint="@string/Enter_your_name"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/editView_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editView_margin_start"
                app:hintTextColor="@color/black"
                android:layout_marginTop="@dimen/editView_margin_top2"
                android:layout_marginEnd="@dimen/editView_margin_end"
                android:background="#f8f9fa"
                android:hint="@string/Enter_your_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:textColorHint="@color/black"
                    android:hint="@string/Enter_your_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/editView_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editView_margin_start"
                app:hintTextColor="@color/black"
                android:layout_marginTop="@dimen/editView_margin_top2"
                android:layout_marginEnd="@dimen/editView_margin_end"
                android:background="#f8f9fa"
                android:hint="@string/Enter_your_phoneNo">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobileNo"
                    android:textColorHint="@color/black"
                    android:hint="@string/Enter_your_phoneNo"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/editView_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/Sign_Up_Btn"
                android:layout_marginTop="@dimen/signin_margintop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Update"
                android:textColor="@color/black"
                android:background="@drawable/sign_in_btn_bg"
                android:textSize="@dimen/Sign_btn_textSize"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingBottom="@dimen/Sign_padding_bottom"
                android:paddingTop="@dimen/Sign_padding_top"
                android:layout_marginLeft="@dimen/Sign_margin_left"
                android:layout_marginRight="@dimen/Sign_margin_right"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>