<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context=".LoginActivity.MobileVerificationActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_size_56dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/very_very_light_orange"
            android:minHeight="?attr/actionBarSize"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_mobile"
        android:visibility="visible"
        android:layout_marginTop="@dimen/cardview_margin_top"
        android:layout_marginRight="@dimen/cardview_margin_left"
        android:layout_marginLeft="@dimen/cardview_margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">
        <LinearLayout
            android:padding="@dimen/linear_layout_padding_16dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editView_margin_start"
                app:hintTextColor="@color/black"
                android:layout_marginTop="@dimen/editView_margin_top"
                android:layout_marginEnd="@dimen/editView_margin_end"
                android:background="#f8f9fa"
                android:hint="@string/Enter_your_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:textColorHint="@color/black"
                    android:hint="@string/Enter_your_name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/editView_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editView_margin_start"
                app:hintTextColor="@color/black"
                android:layout_marginTop="@dimen/editView_margin_top2"
                android:layout_marginEnd="@dimen/editView_margin_end"
                android:background="#f8f9fa"
                android:hint="@string/Enter_your_phoneNo">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phoneNo"
                    android:textColorHint="@color/black"
                    android:hint="@string/Enter_your_phoneNo"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/editView_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/Sign_Up_Btn"
                android:layout_marginTop="@dimen/signin_margintop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sign_up"
                android:textColor="@color/black"
                android:background="@drawable/sign_in_btn_bg"
                android:textSize="@dimen/Sign_btn_textSize"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingBottom="@dimen/Sign_padding_bottom"
                android:paddingTop="@dimen/Sign_padding_top"
                android:layout_marginLeft="@dimen/Sign_margin_left"
                android:layout_marginRight="@dimen/Sign_margin_right"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/card_view_otp"
        android:layout_marginTop="@dimen/cardview_margin_top"
        android:layout_marginRight="@dimen/cardview_margin_left"
        android:layout_marginLeft="@dimen/cardview_margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">
        <LinearLayout
            android:padding="@dimen/linear_layout_padding_16dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.chaos.view.PinView
                android:id="@+id/pinview"
                app:itemCount="6"
                app:itemWidth="50dp"
                app:itemHeight="50dp"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:itemBackground="@color/light_custom_orange"
                android:layout_gravity="center"
                android:inputType="number"
                android:cursorVisible="true"
                app:hideLineWhenFilled="false"
                app:itemRadius="10dp"
                style="@style/PinWidget.PinView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                ></com.chaos.view.PinView>
            <TextView
                android:id="@+id/Sign_Up_Btn_Otp"
                android:layout_marginTop="@dimen/signin_margintop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sign_up"
                android:textColor="@color/black"
                android:background="@drawable/sign_in_btn_bg"
                android:textSize="@dimen/Sign_btn_textSize"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingBottom="@dimen/Sign_padding_bottom"
                android:paddingTop="@dimen/Sign_padding_top"
                android:layout_marginLeft="@dimen/Sign_margin_left"
                android:layout_marginRight="@dimen/Sign_margin_right"/>
            <TextView
                android:id="@+id/resend"
                android:layout_marginTop="@dimen/signin_margintop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>